353680  s390x: Crash with certain glibc versions due to non-implemented TBEGIN
353891  Assert 'bad_scanned_addr < VG_ROUNDDN(start+len, sizeof(Addr))' failed
353917  unhandled amd64-solaris syscall fchdir(120)
353920  unhandled amd64-solaris syscall: 170
354392  unhandled amd64-solaris syscall: 171
354797  Added vbit tester support for PPC 64 isa 2.07 iops
354933  Fix documentation of --kernel-variant=android-no-hw-tls option
355188  valgrind should intercept all malloc related global functions
355455  stderr.exp of test cases wrapmalloc and wrapmallocstatic overconstrained
355454  do not intercept malloc related symbols from the runtime linker
356044  Dwarf line info reader misinterprets is_stmt register
356817  valgrind.h triggers compiler errors on MSVC when defining NVALGRIND
357833  Setting RLIMIT_DATA to zero breaks with linux 4.5+
357871  pthread_spin_destroy not properly wrapped
357887  Fix a file handle leak. VG_(fclose) did not close the file
358030  support direct socket calls on x86 32bit (new in linux 4.3)
359133  Assertion 'eltSzB <= ddpa->poolSzB' failed
359201  futex syscall "skips" argument 5 if op is FUTEX_WAIT_BITSET
359289  s390x: popcnt (B9E1) not implemented
359472  The Power PC vsubuqm instruction doesn't always give the correct result
359503  Add missing syscalls for aarch64 (arm64)
359703  s390: wire up separate socketcalls system calls
359724  getsockname might crash - deref_UInt should call safe_to_deref
359733  amd64 implement ld.so strchr/index override like x86
359829  PowerPC test none/tests/ppc64/test_isa_2_07.c uninitialized memory
        references was fixed.
359871  Incorrect mask handling in ppoll
360008  Contents of Power vr registers contents is not printed correctly when
        the --vgdb-shadow-registers=yes option is used
360425  arm64 unsupported instruction ldpsw
360519  none/tests/arm64/memory.vgtest might fail with newer gcc
360749  kludge for multiple .rodata sections on Solaris no longer needed